--- a/BCD/Base.lproj/Main.storyboard
+++ b/BCD/Base.lproj/Main.storyboard
@@ -23,25 +23,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="F09-Py-h2Y">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="enter av number here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="F09-Py-h2Y">
                                 <rect key="frame" x="16" y="72" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" returnKeyType="go"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WkO-Vo-nK5">
+                                <rect key="frame" x="329" y="110" width="30" height="30"/>
+                                <state key="normal" title="GO"/>
+                                <connections>
+                                    <segue destination="J1l-gt-L0q" kind="show" id="ZLI-Kf-e0X"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="WkO-Vo-nK5" firstAttribute="top" secondItem="F09-Py-h2Y" secondAttribute="bottom" constant="8" id="1fC-Uh-S0E"/>
                             <constraint firstAttribute="leadingMargin" secondItem="F09-Py-h2Y" secondAttribute="leading" id="PRk-Pr-Wi8"/>
                             <constraint firstItem="F09-Py-h2Y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TFY-fU-N64"/>
                             <constraint firstItem="F09-Py-h2Y" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="VYs-ky-V01"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WkO-Vo-nK5" secondAttribute="trailing" id="aEC-W7-mc2"/>
                             <constraint firstAttribute="trailingMargin" secondItem="F09-Py-h2Y" secondAttribute="trailing" id="aXP-wS-wbM"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Bilibili Cover Downloader" id="Vxh-nz-ozR"/>
                     <connections>
+                        <outlet property="goButton" destination="WkO-Vo-nK5" id="xWl-fV-m6S"/>
                         <outlet property="textField" destination="F09-Py-h2Y" id="vcd-sx-HZC"/>
-                        <segue destination="J1l-gt-L0q" kind="show" identifier="segue" id="oal-ws-kWo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
