--- a/BCD/Base.lproj/Main.storyboard
+++ b/BCD/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Bilibili 视频封面下载器-->
+        <!--BilibiliCD-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BCD" customModuleProvider="target" sceneMemberID="viewController">
@@ -33,7 +33,7 @@
                                 <rect key="frame" x="328" y="110" width="31" height="30"/>
                                 <state key="normal" title="获取"/>
                                 <connections>
-                                    <segue destination="J1l-gt-L0q" kind="show" id="ZLI-Kf-e0X"/>
+                                    <segue destination="J1l-gt-L0q" kind="show" identifier="getImage" id="ZLI-Kf-e0X"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -47,7 +47,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="F09-Py-h2Y" secondAttribute="trailing" id="aXP-wS-wbM"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Bilibili 视频封面下载器" id="Vxh-nz-ozR">
+                    <navigationItem key="navigationItem" title="BilibiliCD" id="Vxh-nz-ozR">
                         <barButtonItem key="leftBarButtonItem" image="ic_menu" id="jUr-6b-adq"/>
                     </navigationItem>
                     <connections>
@@ -99,7 +99,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fjh-fO-3X6">
                                 <rect key="frame" x="16" y="72" width="343" height="214.5"/>
                                 <connections>
-                                    <segue destination="c48-nJ-AAz" kind="show" id="jpk-Zu-PYG"/>
+                                    <segue destination="c48-nJ-AAz" kind="custom" identifier="segue" customClass="ImageSegue" customModule="BCD" customModuleProvider="target" id="jpk-Zu-PYG"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -160,11 +160,17 @@
                                     <constraint firstAttribute="width" secondItem="BB4-Rm-pPw" secondAttribute="height" multiplier="8:5" id="I7z-kL-keP"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9oR-Fl-ry5">
+                                <rect key="frame" x="313" y="20" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="BB4-Rm-pPw" firstAttribute="centerY" secondItem="R1a-R9-uef" secondAttribute="centerY" id="G1u-Ul-ixo"/>
+                            <constraint firstItem="9oR-Fl-ry5" firstAttribute="top" secondItem="Qz3-tw-mPa" secondAttribute="bottom" id="Qnb-uo-9N7"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9oR-Fl-ry5" secondAttribute="trailing" id="Ram-02-cCn"/>
                             <constraint firstItem="BB4-Rm-pPw" firstAttribute="centerX" secondItem="R1a-R9-uef" secondAttribute="centerX" id="Rfw-mt-uoM"/>
                             <constraint firstItem="BB4-Rm-pPw" firstAttribute="width" secondItem="R1a-R9-uef" secondAttribute="width" id="zsQ-hj-1aQ"/>
                         </constraints>
@@ -173,6 +179,7 @@
                             <outletCollection property="gestureRecognizers" destination="XyJ-Fm-0yI" appends="YES" id="PXk-3V-r12"/>
                         </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="KRb-BT-2Od"/>
                     <connections>
                         <outlet property="imageView" destination="BB4-Rm-pPw" id="0H2-kT-7V0"/>
                         <outlet property="widthConstraint" destination="zsQ-hj-1aQ" id="CaE-Vf-4Ca"/>
